--- a/User/contact.html
+++ b/User/contact.html
@@ -80,7 +80,7 @@
                     </ul> <!-- s-header__menu-links -->
     
                     <div class="s-header__contact">
-                        <a href="Assets/resume.pdf" target="_blank" class="btn btn--primary u-fullwidth s-header__contact-btn">Resume</a>                        
+                        <a href="https://drive.google.com/file/d/1g8vO-v1SEbf_1vx9t47DpwCJo4HfuLQd/view?usp=sharing" target="_blank" class="btn btn--primary u-fullwidth s-header__contact-btn">Resume</a>                        
                     </div>
                     
                 </nav> <!-- end s-header__nav -->
