--- a/User/index.html
+++ b/User/index.html
@@ -7,6 +7,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Portfolio | GK</title>
+    <meta name="keywords" content="Gautham K, portfolio, web developer,Gk,Gk porfolio">
     <meta name="description" content="Welcome to the portfolio of Gautham K — a passionate developer showcasing creative projects, skills, and achievements. Explore my work and get in touch!">
     <meta name="author" content="Gautham K">
 
@@ -21,12 +22,12 @@
     ================================================== -->
     <meta property="og:title" content="Portfolio | Gautham K">
     <meta property="og:description" content="Explore my portfolio — showcasing development projects, design work, and personal achievements.">
-    <meta property="og:image" content="Assets/favicon-32x32.png">
-    <meta property="og:url" content="https://your-portfolio-link.com">
+    <meta property="og:image" content="https://gauthamk.netlify.app/Assets/favicon-32x32.png">
+    <meta property="og:url" content="https://gauthamk.netlify.app/">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Portfolio | Gautham K">
     <meta name="twitter:description" content="A showcase of my best projects and creative work.">
-    <meta name="twitter:image" content="Assets/favicon-32x32.png">
+    <meta name="twitter:image" content="https://gauthamk.netlify.app/Assets/favicon-32x32.png">
 
     <!-- CSS
     ================================================== -->
@@ -38,6 +39,24 @@
     <link rel="icon" type="image/png" sizes="32x32" href="Assets/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="Assets/favicon-16x16.png">
     <link rel="manifest" href="Assets/site.webmanifest">
+
+    <!-- Structured Data (SEO)
+================================================== -->
+    <script type="application/ld+json">
+        {
+        "@context": "https://schema.org",
+        "@type": "Person",
+        "name": "Gautham K",
+        "url": "https://gauthamk.netlify.app/",
+        "sameAs": [
+            "https://github.com/gauthamk357",
+            "https://www.linkedin.com/in/gauthamk357"
+        ],
+        "jobTitle": "Web Developer",
+        "description": "A passionate developer showcasing creative projects, skills, and achievements.",
+        "image": "https://gauthamk.netlify.app/Assets/favicon-32x32.png"
+        }
+    </script>
 
 </head>
 
@@ -393,9 +412,6 @@
     ================================================== -->
     <script src="Assets/js/plugins.js"></script>
     <script src="Assets/js/main.js"></script>
-
-    
-
     
 
 </body>
