--- a/User/index.html
+++ b/User/index.html
@@ -10,6 +10,7 @@
     <meta name="keywords" content="Gautham K, portfolio, web developer,Gk,Gk porfolio">
     <meta name="description" content="Welcome to the portfolio of Gautham K — a passionate developer showcasing creative projects, skills, and achievements. Explore my work and get in touch!">
     <meta name="author" content="Gautham K">
+    <meta name="google-site-verification" content="W-QTRH-VdQBlH9ousJHzZ9ayV_mROkAspFEJHgaWFfY" />
 
     <!-- JavaScript Class Switch
     ================================================== -->
