--- a/User/contact.html
+++ b/User/contact.html
@@ -1,39 +1,28 @@
 <!DOCTYPE html>
 <html lang="en" class="no-js">
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Contact | GK</title>
-    <meta name="description" content="Welcome to the portfolio of Gautham K — a passionate developer showcasing creative projects, skills, and achievements. Explore my work and get in touch!">
-    <meta name="author" content="Gautham K">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Contact | GK</title>
+  <meta name="description" content="Contact Gautham K — passionate developer showcasing creative projects, skills, and achievements. Get in touch and collaborate!">
+  <meta name="author" content="Gautham K">
 
-    <script>
-        document.documentElement.classList.remove('no-js');
-        document.documentElement.classList.add('js');
-    </script>
+  <script>
+    document.documentElement.classList.remove('no-js');
+    document.documentElement.classList.add('js');
+  </script>
 
-    <!-- CSS -->
-    <link rel="stylesheet" href="Assets/css/styles.css">
+  <!-- CSS -->
+  <link rel="stylesheet" href="Assets/css/styles.css">
 
-    <!-- Favicons -->
-    <link rel="apple-touch-icon" sizes="180x180" href="Assets/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="Assets/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="Assets/favicon-16x16.png">
-    <link rel="manifest" href="Assets/site.webmanifest">
+  <!-- Favicons -->
+  <link rel="apple-touch-icon" sizes="180x180" href="Assets/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="Assets/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="Assets/favicon-16x16.png">
+  <link rel="manifest" href="Assets/site.webmanifest">
 </head>
 
-    <!-- CSS
-    ================================================== -->
-    <link rel="stylesheet" href="Assets/css/styles.css">
 
-    <!-- favicons
-    ================================================== -->
-    <link rel="apple-touch-icon" sizes="180x180" href="Assets/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="Assets/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="Assets/favicon-16x16.png">
-    <link rel="manifest" href="Assets/site.webmanifest">
-
-</head>
 
 
 <body id="top">
