--- a/User/contact.html
+++ b/User/contact.html
@@ -19,6 +19,7 @@
   <link rel="apple-touch-icon" sizes="180x180" href="Assets/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="Assets/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="Assets/favicon-16x16.png">
+  <link rel="icon" href="/favicon.ico" type="image/x-icon">
   <link rel="manifest" href="Assets/site.webmanifest">
 </head>
 
@@ -127,38 +128,36 @@
                                     </a>
                                 </div> 
                                 <div class="column xl-5 md-12 u-flexitem-x-right">
-
                                     <div class="contact-block">
                                         <h6>Follow On Social</h6>
                                         <ul class="contact-social social-list">
-                                            <li>
-                                                <a href="https://www.linkedin.com/in/gauthamkrishnaj/" target="_blank">
-                                                    <img src="Assets/images/icons/linkedin.png" alt="LinkedIn" width="24" height="24">
-                                                </a>
-                                            </li>
-                                            <li>
-                                                <a href="https://github.com/g4thxm" target="_blank">
-                                                    <img src="Assets/images/icons/github.png" alt="GitHub" width="24" height="24">
-                                                </a>
-                                            </li>
-                                            <li>
-                                                <a href="https://www.instagram.com/iam._.gautham" target="_blank">
-                                                    <img src="Assets/images/icons/instagram.png" alt="Instagram" width="24" height="24">
-                                                </a>
-                                            </li>
+                                        <li>
+                                            <a href="https://www.linkedin.com/in/gauthamkrishnaj/" target="_blank" rel="noopener noreferrer">
+                                                <img src="Assets/images/icons/linkedin.png" alt="Follow Gautham on LinkedIn" width="24" height="24">
+                                            </a>
+                                        </li>
+                                        <li>
+                                            <a href="https://github.com/g4thxm" target="_blank" rel="noopener noreferrer">
+                                                <img src="Assets/images/icons/github.png" alt="Follow Gautham on GitHub" width="24" height="24">
+                                            </a>
+                                        </li>
+                                        <li>
+                                            <a href="https://www.instagram.com/iam._.gautham" target="_blank" rel="noopener noreferrer">
+                                                <img src="Assets/images/icons/instagram.png" alt="Follow Gautham on Instagram" width="24" height="24">
+                                            </a>
+                                        </li>
                                         </ul>
                                     </div>
-
-
+                                
                                     <div class="contact-block">
                                         <h6>Email</h6>
-                                        <a href="mailto:#0">gauthamk357@gmail.com</a>
+                                        <a href="mailto:gauthamk357@gmail.com">gauthamk357@gmail.com</a>
                                     </div>
 
                                     <div class="contact-block">
                                         <h6>Phone</h6>
                                         <ul class="contact-list">
-                                            <li><a href="tel:197-543-2345">+91 88485 76524</a></li>
+                                        <li><a href="tel:+918848576524">+91 88485 76524</a></li>
                                         </ul>
                                     </div>
 
@@ -193,13 +192,13 @@
                         <p>Designing & Developing with passion for clean and modern web experiences.</p>
 
                       <div class="footer-socials" style="display: flex; gap: 15px; align-items: center; margin-top: 10px;">
-                        <a href="https://www.linkedin.com/in/gauthamkrishnaj/" target="_blank">
+                        <a href="https://www.linkedin.com/in/gauthamkrishnaj/" target="_blank" rel="noopener noreferrer">
                             <img src="Assets/images/icons/linkedin.png" alt="LinkedIn" width="24px">
                         </a>
-                        <a href="https://github.com/g4thxm" target="_blank">
+                        <a href="https://github.com/g4thxm" target="_blank" rel="noopener noreferrer">
                             <img src="Assets/images/icons/github.png" alt="GitHub" width="24px">
                         </a>
-                        <a href="https://www.instagram.com/iam._.gautham" target="_blank">
+                        <a href="https://www.instagram.com/iam._.gautham" target="_blank"  rel="noopener noreferrer">
                             <img src="Assets/images/icons/instagram.png" alt="Instagram" width="24px">
                         </a>
                     </div>
