--- a/User/index.html
+++ b/User/index.html
@@ -39,25 +39,9 @@
     <link rel="apple-touch-icon" sizes="180x180" href="Assets/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="Assets/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="Assets/favicon-16x16.png">
+    <link rel="icon" href="/favicon.ico" type="image/x-icon">
     <link rel="manifest" href="Assets/site.webmanifest">
-
-    <!-- Structured Data (SEO)
-================================================== -->
-    <script type="application/ld+json">
-        {
-        "@context": "https://schema.org",
-        "@type": "Person",
-        "name": "Gautham K",
-        "url": "https://gauthamk.netlify.app/",
-        "sameAs": [
-            "https://github.com/gauthamk357",
-            "https://www.linkedin.com/in/gauthamk357"
-        ],
-        "jobTitle": "Web Developer",
-        "description": "A passionate developer showcasing creative projects, skills, and achievements.",
-        "image": "https://gauthamk.netlify.app/Assets/favicon-32x32.png"
-        }
-    </script>
+    
 
 </head>
 
@@ -380,13 +364,13 @@
                         <p>Designing & Developing with passion for clean and modern web experiences.</p>
 
                              <div class="footer-socials" style="display: flex; gap: 15px; align-items: center; margin-top: 10px;">
-                                <a href="https://www.linkedin.com/in/gauthamkrishnaj/" target="_blank">
+                                <a href="https://www.linkedin.com/in/gauthamkrishnaj/" target="_blank" rel="noopener noreferrer">
                                     <img src="Assets/images/icons/linkedin.png" alt="LinkedIn" width="24px">
                                 </a>
-                                <a href="https://github.com/g4thxm" target="_blank">
+                                <a href="https://github.com/g4thxm" target="_blank" rel="noopener noreferrer">
                                     <img src="Assets/images/icons/github.png" alt="GitHub" width="24px">
                                 </a>
-                                <a href="https://www.instagram.com/iam._.gautham" target="_blank">
+                                <a href="https://www.instagram.com/iam._.gautham" target="_blank" rel="noopener noreferrer">
                                     <img src="Assets/images/icons/instagram.png" alt="Instagram" width="24px">
                                 </a>
                             </div>
