--- a/User/work.html
+++ b/User/work.html
@@ -19,6 +19,7 @@
     <link rel="apple-touch-icon" sizes="180x180" href="Assets/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="Assets/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="Assets/favicon-16x16.png">
+    <link rel="icon" href="/favicon.ico" type="image/x-icon">
     <link rel="manifest" href="Assets/site.webmanifest">
 </head>
 
@@ -111,13 +112,13 @@
                             <p>Designing & Developing with passion for clean and modern web experiences.</p>
 
                              <div class="footer-socials" style="display: flex; gap: 15px; align-items: center; margin-top: 10px;">
-                                <a href="https://www.linkedin.com/in/gauthamkrishnaj/" target="_blank">
+                                <a href="https://www.linkedin.com/in/gauthamkrishnaj/" target="_blank" rel="noopener noreferrer">
                                     <img src="Assets/images/icons/linkedin.png" alt="LinkedIn" width="24px">
                                 </a>
-                                <a href="https://github.com/g4thxm" target="_blank">
+                                <a href="https://github.com/g4thxm" target="_blank" rel="noopener noreferrer">
                                     <img src="Assets/images/icons/github.png" alt="GitHub" width="24px">
                                 </a>
-                                <a href="https://www.instagram.com/iam._.gautham" target="_blank">
+                                <a href="https://www.instagram.com/iam._.gautham" target="_blank" rel="noopener noreferrer">
                                     <img src="Assets/images/icons/instagram.png" alt="Instagram" width="24px">
                                 </a>
                             </div>
@@ -223,6 +224,7 @@
                 console.error(err);
                 repoList.innerHTML = `<p style="color:red;">Failed to load repositories 😞</p>`;
             });
+            
     </script>
 
 </body>
