--- a/User/index.html
+++ b/User/index.html
@@ -37,8 +37,8 @@
     <!-- Favicon & Web Manifest
     ================================================== -->
     <link rel="apple-touch-icon" sizes="180x180" href="Assets/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="Assets/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="Assets/favicon-16x16.png">
+    <!-- <link rel="icon" type="image/png" sizes="32x32" href="Assets/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="Assets/favicon-16x16.png"> -->
     <link rel="icon" href="/favicon.ico" type="image/x-icon">
     <link rel="manifest" href="Assets/site.webmanifest">
     
@@ -87,8 +87,8 @@
     
                     <ul class="s-header__menu-links">
                         <li><a href="#about">About</a></li>
+                        <li><a href="#certificates">Certificates</a></li>
                         <li><a href="/work">Works</a></li>
-                        <!-- <li><a href="blog.html">Journal</a></li> -->
                         <!-- <li><a href="contact.html">Contact</a></li> -->
                     </ul> <!-- s-header__menu-links -->
 
@@ -256,7 +256,7 @@
 
             <!-- certificates
             ----------------------------------------------- -->
-            <section id="clients" class="s-clients">          
+            <section id="certificates" class="s-clients">          
 
                 <div class="row s-clients__content-block width-sixteen-col">
                     <div class="column xl-12 grid-block grid-section-split">
