--- a/User/index.html
+++ b/User/index.html
@@ -39,7 +39,7 @@
     <link rel="apple-touch-icon" sizes="180x180" href="Assets/apple-touch-icon.png">
     <!-- <link rel="icon" type="image/png" sizes="32x32" href="Assets/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="Assets/favicon-16x16.png"> -->
-    <link rel="icon" href="/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
     <link rel="manifest" href="Assets/site.webmanifest">
     
 
@@ -288,7 +288,7 @@
                                     <img src="Assets/images/certificates/spec.png" alt="">
                                 </a>
 
-                                <a href="https://drive.google.com/file/d/18wBksSiV0kusJgXtXqG4CzV5wOx8fohF/view?usp=sharing" target="_blank" class="clients-list__item">
+                                <a href="https://drive.google.com/file/d/18wBksSiV0kusJgXtXqG4CzV5wOx8fohF/view?usp=sharing" target="_blank" class="clients-list__item" >
                                     <img src="Assets/images/certificates/ict.png" alt="">
                                 </a>
 
