--- a/User/work.html
+++ b/User/work.html
@@ -17,9 +17,9 @@
 
     <!-- Favicons -->
     <link rel="apple-touch-icon" sizes="180x180" href="Assets/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="Assets/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="Assets/favicon-16x16.png">
-    <link rel="icon" href="/favicon.ico" type="image/x-icon">
+    <!-- <link rel="icon" type="image/png" sizes="32x32" href="Assets/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="Assets/favicon-16x16.png"> -->
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
     <link rel="manifest" href="Assets/site.webmanifest">
 </head>
 
