--- a/User/index.html
+++ b/User/index.html
@@ -36,11 +36,12 @@
 
     <!-- Favicon & Web Manifest
     ================================================== -->
-    <link rel="apple-touch-icon" sizes="180x180" href="Assets/apple-touch-icon.png">
-    <!-- <link rel="icon" type="image/png" sizes="32x32" href="Assets/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="Assets/favicon-16x16.png"> -->
-    <link rel="icon" href="favicon.ico" type="image/x-icon">
-    <link rel="manifest" href="Assets/site.webmanifest">
+    <link rel="icon" type="image/x-icon" href="/favicon.ico">
+    <link rel="icon" type="image/png" sizes="32x32" href="/Assets/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/Assets/favicon-16x16.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/Assets/apple-touch-icon.png">
+    <link rel="manifest" href="/Assets/site.webmanifest">
+
     
 
 </head>
