--- a/User/work.html
+++ b/User/work.html
@@ -16,11 +16,12 @@
     <link rel="stylesheet" href="Assets/css/styles.css">
 
     <!-- Favicons -->
-    <link rel="apple-touch-icon" sizes="180x180" href="Assets/apple-touch-icon.png">
-    <!-- <link rel="icon" type="image/png" sizes="32x32" href="Assets/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="Assets/favicon-16x16.png"> -->
-    <link rel="icon" href="favicon.ico" type="image/x-icon">
-    <link rel="manifest" href="Assets/site.webmanifest">
+    <link rel="icon" type="image/x-icon" href="/favicon.ico">
+    <link rel="icon" type="image/png" sizes="32x32" href="/Assets/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/Assets/favicon-16x16.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/Assets/apple-touch-icon.png">
+    <link rel="manifest" href="/Assets/site.webmanifest">
+
 </head>
 
 <body id="top">
@@ -55,7 +56,7 @@
                     </ul>
 
                     <div class="s-header__contact">
-                        <a href="https://drive.google.com/file/d/1g8vO-v1SEbf_1vx9t47DpwCJo4HfuLQd/view?usp=sharing" target="_blank" class="btn btn--primary u-fullwidth s-header__contact-btn">Resume</a>                        
+                        <a href="https://drive.google.com/file/d/1FCjr3SHTLktuAwTb-zFEo6zBrfDKskR2/view?usp=sharing" target="_blank" class="btn btn--primary u-fullwidth s-header__contact-btn">Resume</a>                        
                     </div>
                     
                 </nav>
