--- a/User/work.html
+++ b/User/work.html
@@ -16,11 +16,11 @@
     <link rel="stylesheet" href="Assets/css/styles.css">
 
     <!-- Favicons -->
-    <link rel="icon" type="image/x-icon" href="/favicon.ico">
+    <!-- <link rel="icon" type="image/x-icon" href="/favicon.ico"> -->
     <link rel="icon" type="image/png" sizes="32x32" href="/Assets/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/Assets/favicon-16x16.png">
+    <!-- <link rel="icon" type="image/png" sizes="16x16" href="/Assets/favicon-16x16.png">
     <link rel="apple-touch-icon" sizes="180x180" href="/Assets/apple-touch-icon.png">
-    <link rel="manifest" href="/Assets/site.webmanifest">
+    <link rel="manifest" href="/Assets/site.webmanifest"> -->
 
 </head>
 
