--- a/User/index.html
+++ b/User/index.html
@@ -32,7 +32,7 @@
 
     <!-- CSSw
     ================================================== -->
-    <link rel="stylesheet" href="/Assets/css/styles.css">
+    <link rel="stylesheet" href="Assets/css/styles.css">
 
     <!-- Favicon & Web Manifest
     ================================================== -->
@@ -427,7 +427,7 @@
             </div>
 
             <!-- BIG GAUTHAM TEXT -->
-            <div class="also-bigtext">GAUTHAM</div>
+            <div class="also-bigtext"></div>
 
         </footer><!-- end s-footer -->
     </section> 
