--- a/User/index.html
+++ b/User/index.html
@@ -425,6 +425,14 @@
                 </div>
 
             </div>
+             <a class="ss-go-top" href="#top" title="Back to Top">
+            <svg xmlns="http://www.w3.org/2000/svg" width="38" height="38"
+                viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
+                <polyline points="17 11 12 6 7 11"></polyline>
+                <line x1="12" y1="6" x2="12" y2="18"></line>
+            </svg>
+        </a>
 
             <!-- BIG GAUTHAM TEXT -->
             <div class="also-bigtext"></div>
@@ -433,14 +441,14 @@
     </section> 
 </div> <!-- end page-wrap -->
 
-   
-   
+
    
     <!-- Java Script
     ================================================== -->
     <script src="Assets/js/plugins.js"></script>
     <script src="Assets/js/main.js"></script>
     <script src="Assets/js/git.js"></script>
+    <script src="Assets/js/skillbar.js"></script>
 
     
 </body>
