--- a/User/index.html
+++ b/User/index.html
@@ -36,18 +36,18 @@
 
     <!-- Favicon & Web Manifest
     ================================================== -->
-    <!-- <link rel="icon" type="image/x-icon" href="/favicon.ico"> -->
-    <link rel="icon" type="image/png" sizes="32x32" href="/Assets/favicon-32x32.png">
-    <!-- <link rel="icon" type="image/png" sizes="16x16" href="/Assets/favicon-16x16.png"> -->
-    <!-- <link rel="apple-touch-icon" sizes="180x180" href="/Assets/apple-touch-icon.png"> -->
-    <!-- <link rel="manifest" href="/Assets/site.webmanifest"> -->
+    <link rel="icon" type="image/x-icon" href="/favicon.ico">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png"> 
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="manifest" href="/site.webmanifest">
 </head>
 
 
 
 <body id="top">
 
-    
+
     <!-- preloader
     ================================================== -->
     <div id="preloader">
