--- a/User/index.html
+++ b/User/index.html
@@ -70,7 +70,7 @@
              <div class="row s-header__inner width-sixteen-col">
                <div class="s-header__block">
                     <div class="s-header__logo">
-                        <a class="logo" href="/">
+                        <a class="logo" href="index.html">
                             <img src="Assets/images/logo1.png" alt="Homepage" width="100px">
                         </a>
                     </div>
@@ -130,7 +130,12 @@
                             <div class="s-intro__scroll-down">
                                 <a href="#about" class="smoothscroll">
                                     <div class="scroll-icon">
-                                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="36" height="36" fill="none" stroke="#97b34a" stroke-width="1" stroke-linecap="round" stroke-linejoin="round">&lt;!--!  Atomicons Free 1.00 by @atisalab License - https://atomicons.com/license/ (Icons: CC BY 4.0) Copyright 2021 Atomicons --&gt;<polyline points="7 13 12 18 17 13"></polyline><line x1="12" y1="18" x2="12" y2="6"></line></svg>
+                                        <svg xmlns="http://www.w3.org/2000/svg" 
+                                            viewBox="0 0 24 24" width="36" height="36" fill="none" stroke="#97b34a" 
+                                            stroke-width="1" stroke-linecap="round" stroke-linejoin="round">
+                                            <polyline points="7 13 12 18 17 13"></polyline>
+                                            <line x1="12" y1="18" x2="12" y2="6"></line>
+                                        </svg>
                                     </div>
                                     <span>Scroll for more</span>
                                 </a>
@@ -423,19 +428,22 @@
                         Let’s connect and create something extraordinary together.
                     </p>
                 </div>
-
-            </div>
-             <a class="ss-go-top" href="#top" title="Back to Top">
-            <svg xmlns="http://www.w3.org/2000/svg" width="38" height="38"
-                viewBox="0 0 24 24" fill="none" stroke="currentColor"
-                stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
-                <polyline points="17 11 12 6 7 11"></polyline>
-                <line x1="12" y1="6" x2="12" y2="18"></line>
-            </svg>
-        </a>
-
+             </div>
             <!-- BIG GAUTHAM TEXT -->
             <div class="also-bigtext"></div>
+
+            <div class="footer-go-top">
+                <a href="#top" class="smoothscroll" title="Back to Top">
+                    <div class="footer-arrow-icon">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32"
+                            viewBox="0 0 24 24" fill="none" stroke="#97b34a"
+                            stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
+                            <polyline points="17 11 12 6 7 11"></polyline>
+                            <line x1="12" y1="6" x2="12" y2="18"></line>
+                        </svg>
+                    </div>
+                </a>
+            </div>
 
         </footer><!-- end s-footer -->
     </section> 
